--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "type": "module",
   "dependencies": {
     "@types/express-validator": "^3.0.0",
+    "@types/nodemailer": "^6.4.4",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-validator": "^6.14.0",
-    "mysql2": "^2.3.3"
+    "express-validator": "^6.14.1",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5"
   },
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
